--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -25,6 +25,7 @@
     border: 1px solid $border-color;
     background: #f8f9fa;
     border-top: none;
+    position: relative;
   }
 
   .row-data {
@@ -42,6 +43,7 @@
     height: 100%;
     border-top: none;
     border-left: none;
+    position: relative;
   }
 
   .cell {
@@ -58,8 +60,34 @@
 
     &.selected {
       border: none;
-      outline: 2px solid #3c74ff;
+      outline: 2px solid $primary-color;
       z-index: 2;
+    }
+  }
+
+  .col-resize {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 2px;
+
+    &:hover {
+      background: $primary-color;
+      cursor: col-resize;
+    }
+  }
+
+  .row-resize {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 2px;
+
+    &:hover {
+      background: $primary-color;
+      cursor: row-resize;
     }
   }
 }
